--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yummy sanafa</title>
+  <title>Diety</title>
 
 
 
-  <link rel="canonical" href="https://www.yummysanafa.tn" />
+  <link rel="canonical" href="https://www.diety.tn" />
   <meta name="robots" content="index, follow" />
   <meta name="description"
     content="هوني، باش تعمل كيف على التصنيف. وصفات ساهلة، وبنينة و متشدش اليد، بالفيديو ومفسرين بالخطوة بالخطوة." />
@@ -17,19 +17,19 @@
     content="حلويات, سريعة, لذيذة, سهلة , تارت , شوكولاتة" />
 
   <!-- Balises pour le SEO -->
-  <meta property="og:title" content="Yummysanafa" />
+  <meta property="og:title" content="Diety" />
   <meta property="og:description"
-    content="Yummysanafa" />
+    content="Diety" />
   <meta property="og:image" content="/icon.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.yummysanafa.tn" />
+  <meta property="og:url" content="https://www.diety.tn" />
 
   <!-- Pour Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Yummysanafa" />
+  <meta name="twitter:title" content="Diety" />
   <meta name="twitter:description"
-    content="Yummysanafa" />
+    content="Diety" />
   <meta name="twitter:image" content="/icon.png" />
 
 
